[metadata]
name = checkip
version = 0.0.3
author = Toni Sredanovic
author_email = toni.sredanovic@gmail.com
description = Resolves WAN IP from supported providers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsredanovic/checkip
project_urls =
    Bug Tracker = https://github.com/tsredanovic/checkip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src
